fix indent and dedent tokens in lexer wrap id token in order to make it composite element add code completion via CompletionContributor add context patterns for completion add custom CompletionProvider

--- a/src/main/java/com/gitlabci/plugin/language/test.yaml
+++ b/src/main/java/com/gitlabci/plugin/language/test.yaml
@@ -1,9 +1,2 @@
-test: test
-
-include:
-  - project: 'my-group/my-project'
-    ref: main
-    file:
-      - '/templates/.builds.yml'
-      - '/templates/.tests.yml'
-  when: on_success
+test:
+  test:
