--- a/src/main/java/com/gitlabci/plugin/language/test.yaml
+++ b/src/main/java/com/gitlabci/plugin/language/test.yaml
@@ -1,2 +1,17 @@
 test:
+  - test: "test"
+    pre: "test"
+    test1: "test"
+  - test: "test"
+    pre: "test"
+    test1: "test"
+  - test: "test"
+    pre: "test"
+    test1: "test"
+
+test:
   test:
+    test: test
+  test: test
+  test:
+    test: test
